# FIRMEurope

./: .gitignore  README.md  firm_run.py  lines.csv  links.csv  nodes.csv  phs_plants.csv  pyproject.toml  ror_plants.csv
Data/: _dataGeneration.ipynb  costs.csv  european_data_for_harry.ipynb  existing_capacity.csv  fixsolar_cf.csv  gas.csv  gas_costs.csv  hydro_plants.csv  inflow.csv  offwind_costs.csv  phs_plants.csv  ror_cf.csv  ror_plants.csv  satsolar_cf.csv
src/firm/: Benchmark.py  CmdLineEntry.py  Costs.py  FilePrinter.py  Fileprinter.py  Input.py  Interconnection.py  Linear_transmission.py  Network.py  Optimisation.py  Parameters.py  Simulation.py  Statistics.py  Utils.py  optimisation_utils.py
tests/unit/firm/: test_input.py
