[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests"]
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firm"
version = "0.0.1"
description = "Long-term energy planning model focused on optimising grid-balancing technologies"
dependencies = ["numba>=0.60", "numpy>=1.25", "scipy>=1.12", "pandas>=2.2", "psutil>=6.0"]

[project.optional-dependencies]
dev = ["bandit", "flake8", "mypy", "black", "coverage", "scipy-stubs"]
test = ["pytest"]
cli = ["click", "rich"]

[tool.setuptools.package-data]
"firm" = ["py.typed"]

[project.scripts]
firm = "firm.CmdLineEntry:Entry"

